discussion/kv_engine/128640/128640_rev19_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Make server_stats use StatCollector

Some stats currently in server_stats will be exposed for Prometheus in
the future.

Prepare by moving server_stats to adding stats using a StatCollector
instance. Existing behaviour is unchanged - add_casted_stat is a
wrapper around CBStatCollector already, it simply used more directly
now.

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-07-28 10:22:18.000000000
Message: 
Uploaded patch set 19: Patch Set 18 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-28 10:48:24.000000000
Message: 
Patch Set 19: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25357/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1192:36:
error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1059:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const magma::Slice)>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25357/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3530/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: use of undeclared identifier "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:36: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:38: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:40: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:41: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                        ^
                                        ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3530/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3530/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2044/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
